.provarCaches/00D410000011HE0EAM/objects/rstk__sobolprtc__c.object
<CustomObject>
    <description>Bill of Lading Print Container Details - sobolprtc__c</description>
    <fields>
        <fullName>rstk__comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__containerid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Container ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__desc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__grosswt__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Gross Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__line__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Line Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__line_height__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Line Height</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__linetype__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Empty</fullName>
                </value>
                <value>
                    <fullName>Detail</fullName>
                </value>
                <value>
                    <fullName>Description</fullName>
                </value>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Comment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__netwt__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Net Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__quantity__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sobolc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Bill of Lading Container Detail</label>
        <referenceTo>rstk__sobolc__c</referenceTo>
        <relationshipName>BOL_Print_Containers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sobolprt__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>BOL Print Header</label>
        <referenceTo>rstk__sobolprt__c</referenceTo>
        <relationshipName>lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sobols__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Bill of Lading Shipper Detail</label>
        <referenceTo>rstk__sobols__c</referenceTo>
        <relationshipName>BOL_Print_Containers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__tarewt__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tare Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_OBSOLETE</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>